--- a/TrackerApp/Localization/ru.lproj/Localizable.stringsdict
+++ b/TrackerApp/Localization/ru.lproj/Localizable.stringsdict
@@ -2,22 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>daysCount</key>
-    <dict>
-        <key>NSStringLocalizedFormatKey</key>
-        <string>%#@days@</string>
-        <key>days</key>
-        <dict>
-            <key>NSStringFormatSpecTypeKey</key>
-            <string>NSStringPluralRuleType</string>
-            <key>NSStringFormatValueTypeKey</key>
-            <string>d</string>
-            <key>one</key>
-            <string>%d day</string>
-            <key>other</key>
-            <string>%d days</string>
-        </dict>
-    </dict>
+	<key>daysCount</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@days@</string>
+		<key>days</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d день</string>
+			<key>few</key>
+			<string>%d дней</string>
+			<key>other</key>
+			<string>%d дней</string>
+			<key>many</key>
+			<string>%d дней</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
-
